--- a/InglesCriancas/InglesCriancas.Android/InglesCriancas.Android.csproj
+++ b/InglesCriancas/InglesCriancas.Android/InglesCriancas.Android.csproj
@@ -202,5 +202,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\english.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\bb" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
